
syntax = "proto3";

//枚举消息类型
enum MsgIDC2S{
    STARTID = 0;
	AskSence = 1;
	Bet = 2;	//下注消息
	XiaMaLi = 3;//小玛丽消息
    Test = 4 ; //测试消息
}

//枚举消息类型
enum ReMsgIDS2C{
    RESTARTID = 0;
	SenceID = 1;//场景消息
	BetRet = 2;	//下注消息
	BetFailID = 3;//下注失败
	XiaMaLiRet = 4;//小玛丽消息
	JackpotGold = 5;//奖池金币消息
}

message UserBet{
	int32 BetMoney = 1;//单线押注金币
}

message BetFail{
	int32 FailID=1;//失败的ID
	string Reson = 2;//下注失败的原因
}

message LineInfo{
	int32 Index=1;//线编号下标
	int32 Count=2;//中奖图的个数
	int64 Gold=3;//奖励的钱
}

message BetRes{
	int64 UserGold=1;
	repeated int32 IconArr = 2;//图片结果
	int32 Odds=3;//玩家赢得的总倍数
	int64 Gold=4;//奖励的钱
	repeated LineInfo Line=5;//压线数组
	bool bEnterFree=6;//是否进入免费游戏
	int32 FreeGames=7;//免费游戏次数
	int32 XiaoMaLi=8;//小玛丽次数
	int64 Jackpot=9;//奖金池游戏奖励
	int32 Cheat = 10;//作弊值
	int64 BloodPool = 11;//血池值
}

message XiaoMaLiRes{
	int32 Times = 1;//小玛丽次数
	int32 OutIndex = 2; //外圈索引
	repeated int32 InIcon = 3;//内圈的图标ID
	int64 Gold = 4;//本次获取的钱
	bool Exit=5;//是否退出小玛丽
}

//场景消息
message Sence{
	int64 Gold = 1;//用户的钱
	repeated int64 BetValue = 2;//用户下注的筹码
	int64 JackpotGold =3;//奖金池的钱
	int32 FreeGameTimes = 4;//免费游戏次数
	int64 FreeGameGold = 5;//免费游戏金币
	int32 XiaoMaLiTimes = 6;//小玛丽次数
	int64 XiaoMaLiGold = 7;//小玛丽获取的金币
	int32 LastBetIndex = 8;	//最近下注的值
}

message JackpotInfo{
	int64 JackpotGold = 1;//奖金池的钱
}


message TestMsg{
    int32 Result = 1 ;//0:中奖  1：免费游戏  2：小游戏
}